src/objects/Apttus__DocumentVersionProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Document Version Properties</description>
    <fields>
        <fullName>Apttus__DocumentRegenerate__c</fullName>
        <description>This property will determine the increment value when regenerating a document using the same template (Regenerating with a different template will always reset the counter). Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;. Default value is Major</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This property will determine the increment value when regenerating a document using the same template (Regenerating with a different template will always reset the counter). Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;. Default value is Major</inlineHelpText>
        <label>Document Regenerate</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersionTrim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will trim the last decimal point and number from the document version in the naming convention. For example version 1.2.0 would become 1.2 in the name of the document.</description>
        <inlineHelpText>Checking this box will trim the last decimal point and number from the document version in the naming convention. For example version 1.2.0 would become 1.2 in the name of the document.</inlineHelpText>
        <label>Trim Document Version Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IncrementCheckinFinal__c</fullName>
        <description>This property will determine the increment factor when a document is checked in as Final.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Major</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This property will determine the increment factor when a document is checked in as Final.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Major</inlineHelpText>
        <label>Increment Checkin Final</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IncrementCheckinWithRedlines__c</fullName>
        <description>This property will determine the increment factor when a document is checked in with redlines.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Minor</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This property will determine the increment factor when a document is checked in with redlines.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Minor</inlineHelpText>
        <label>Increment Checkin With Redlines</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IncrementCheckinWithoutRedlines__c</fullName>
        <description>This property will determine the increment factor when a document is checked in without redlines.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Major</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This property will determine the increment factor when a document is checked in without redlines.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Major</inlineHelpText>
        <label>Increment Checkin Without Redlines</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InitialVersion__c</fullName>
        <description>This property will set the initial version number of a newly generated or uploaded document.  Acceptable values for this field are 1 or 0.  Default value is 1</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This property will set the initial version number of a newly generated or uploaded document.  Acceptable values for this field are 1 or 0.  Default value is 1</inlineHelpText>
        <label>Initial Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Document Version Properties</label>
</CustomObject>